Reset form y validate the imputs

--- a/src/app/components/dashboard/create-plants/create-plants.component.html
+++ b/src/app/components/dashboard/create-plants/create-plants.component.html
@@ -201,6 +201,8 @@
 
       <button class="btn btn-primary mt-5 float-end m-3" routerLink="/dashboard">Volver</button>
 
+      <button class="btn btn-primary mt-5 float-end m-3" (click)="cleanFrom()">Limpiar</button>
+
     </form>
   </div>
 </div>
