--- a/src/app/components/dashboard/plant-statistics/plant-statistics.component.html
+++ b/src/app/components/dashboard/plant-statistics/plant-statistics.component.html
@@ -1,11 +1,105 @@
-
-<div class="row" style="background-color: cadetblue;">
-  {{tittle}}
-</div>
-<div class="row" style="background-color: coral;">
-  Filtrado
+<div class="row text-center" style="background-color: cadetblue;">
+  <h1>{{tittle}}</h1>
 </div>
 
-<div class="row">
-  las cuatros graficas que seran, las de horas, las de dias, las de meses y las de años
+<form [formGroup]="formFilter">
+  <div class="row" style="background-color: coral;">
+    <div class="col-auto p-2 m-3">
+      <div class="form-group">
+        <label>Selecciona una planta</label>
+        <select formControlName="plantId" class="form-control">
+          <option value="" disabled selected>Seleccione un tipo</option>
+          <option *ngFor="let plant of plants" [value]="plant.id">{{ plant.name }}</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="col-4 p-4 m-3">
+      <!-- <label>Fecha de inicio</label> -->
+      <mat-form-field>
+        <!-- <mat-label>Choose a date</mat-label> -->
+        <label>Fecha de inicio</label>
+        <input matInput [matDatepicker]="picker2" formControlName="startDate">
+        <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
+        <mat-datepicker-toggle matIconSuffix [for]="picker2"></mat-datepicker-toggle>
+        <mat-datepicker #picker2></mat-datepicker>
+      </mat-form-field>
+    </div>
+
+    <div class="col-4 p-4 m-3">
+      <!-- <label>Fecha de inicio</label> -->
+      <mat-form-field>
+        <!-- <mat-label>Choose a date</mat-label> -->
+        <label>Fecha fin</label>
+        <input matInput [matDatepicker]="picker" formControlName="endDate">
+        <!-- <mat-hint>MM/DD/YYYY</mat-hint> -->
+        <mat-datepicker-toggle matIconSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <div class="row">
+      <button class="btn btn-primary mt-1 float-end m-3" style="width: 100px; align-items: center;" (click)="ModifyFrom()" >Limpiar</button>
+    </div>
+
+  </div>
+</form>
+
+
+<!--Apartado de graficas-->
+<div class="container-fluid">
+  <!-- Primera Fila -->
+  <div class="row">
+    <div class="col-md-6 p-1">
+      <div class="card m-0">
+        <div class="card-body">
+          <h5 class="card-title">Gráfica de Horas</h5>
+          <div id="hoursChart" style="height: 300px;">
+            <!-- Contenedor único para la gráfica de horas -->
+            <div #hoursChartContainer style="width: 100%; height: 300px;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 p-1">
+      <div class="card m-0">
+        <div class="card-body">
+          <h5 class="card-title">Gráfica de Días</h5>
+          <div id="daysChart" style="height: 300px;">
+            <!-- Contenedor único para la gráfica de días -->
+            <div #daysChartContainer style="width: 100%; height: 300px;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Segunda Fila -->
+  <div class="row">
+    <div class="col-md-6 p-1">
+      <div class="card m-0">
+        <div class="card-body">
+          <h5 class="card-title">Gráfica de Meses</h5>
+          <div id="monthsChart" style="height: 300px;">
+            <!-- Contenedor único para la gráfica de meses -->
+            <div #monthsChartContainer style="width: 100%; height: 300px;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6 p-1">
+      <div class="card m-0">
+        <div class="card-body">
+          <h5 class="card-title">Gráfica de Años</h5>
+          <div id="yearsChart" style="height: 300px;">
+            <!-- Contenedor único para la gráfica de años -->
+            <div #yearsChartContainer style="width: 100%; height: 300px;"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
+
+
+
+
